test.txt
   Compiling Ordis v0.1.0 (/home/flashgnash/Source/rust/Ordis)
warning: unused import: `tokio::sync::Mutex`
 --> src/main.rs:1:5
  |
1 | use tokio::sync::Mutex;  // tokio async runtime
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `impl std::future::Future<Output = Result<Arc<poise::Framework<Data, Box<(dyn std::error::Error + std::marker::Send + Sync + 'static)>>>, SerenityError>>: poise::serenity_prelude::framework::Framework` is not satisfied
   --> src/main.rs:39:20
    |
39  |         .framework(framework)
    |          --------- ^^^^^^^^^ the trait `poise::serenity_prelude::framework::Framework` is not implemented for `impl std::future::Future<Output = Result<Arc<poise::Framework<Data, Box<(dyn std::error::Error + std::marker::Send + Sync + 'static)>>>, SerenityError>>`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `poise::serenity_prelude::framework::Framework`:
              Box<F>
              StandardFramework
              &'a mut F
note: required by a bound in `ClientBuilder::framework`
   --> /home/flashgnash/.cargo/registry/src/index.crates.io-6f17d22bba15001f/serenity-0.11.7/src/client/mod.rs:213:12
    |
211 |     pub fn framework<F>(mut self, framework: F) -> Self
    |            --------- required by a bound in this associated function
212 |     where
213 |         F: Framework + Send + Sync + 'static,
    |            ^^^^^^^^^ required by this bound in `ClientBuilder::framework`

error: future cannot be shared between threads safely
   --> src/main.rs:39:20
    |
39  |         .framework(framework)
    |                    ^^^^^^^^^ future is not `Sync`
    |
    = help: the trait `Sync` is not implemented for `(dyn std::future::Future<Output = Result<poise::serenity_prelude::Client, SerenityError>> + std::marker::Send + 'static)`
note: future is not `Sync` as this value is used across an await
   --> /home/flashgnash/.cargo/registry/src/index.crates.io-6f17d22bba15001f/poise-0.5.7/src/framework/builder.rs:225:63
    |
219 |         let mut client_builder = serenity::ClientBuilder::new(token, intents);
    |             ------------------ has type `ClientBuilder` which is not `Sync`
...
225 |         crate::Framework::new(client_builder, setup, options).await
    |                                                               ^^^^^ await occurs here, with `mut client_builder` maybe used later
226 |     }
    |     - `mut client_builder` is later dropped here
note: required by a bound in `ClientBuilder::framework`
   --> /home/flashgnash/.cargo/registry/src/index.crates.io-6f17d22bba15001f/serenity-0.11.7/src/client/mod.rs:213:31
    |
211 |     pub fn framework<F>(mut self, framework: F) -> Self
    |            --------- required by a bound in this associated function
212 |     where
213 |         F: Framework + Send + Sync + 'static,
    |                               ^^^^ required by this bound in `ClientBuilder::framework`

For more information about this error, try `rustc --explain E0277`.
warning: `Ordis` (bin "Ordis") generated 1 warning
error: could not compile `Ordis` (bin "Ordis") due to 2 previous errors; 1 warning emitted
